--- a/src/styles/_benefits.scss
+++ b/src/styles/_benefits.scss
@@ -1,7 +1,8 @@
 @use "./variables";
 
 .benefits {
-  padding: 2rem 0;
+  padding: 6rem 0;
+  // padding: 2rem 0;
   background-color: variables.$deep-dark;
   color: variables.$whiteColor;
 
