--- a/src/styles/_generals.scss
+++ b/src/styles/_generals.scss
@@ -16,7 +16,18 @@
 .faq,
 .testimonials,
 .contact {
+  // margin: 12rem 0;
+  padding: 10rem 0;
+}
+
+.about,
+.benefits,
+.services,
+.faq,
+.testimonials,
+.contact {
   &__title {
+    // padding-top: 12rem;
     font-size: 4.7rem;
     text-align: center;
     margin-bottom: 4rem;
@@ -38,6 +49,19 @@
         width: 22rem;
         margin: 1rem 0 0 0;
       }
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  .about,
+  .benefits,
+  .services,
+  .faq,
+  .testimonials,
+  .contact {
+    &__title {
+      font-size: 3.5rem;
     }
   }
 }
