--- a/src/styles/_services.scss
+++ b/src/styles/_services.scss
@@ -1,14 +1,9 @@
 .services {
-  margin: 6rem 0;
+  padding: 6rem 0;
 
   &__intro {
     text-align: center;
     margin-bottom: 4rem;
-  }
-
-  &__title {
-    font-size: 4.7rem;
-    margin-bottom: 1.5rem;
   }
 
   &__description {
@@ -40,7 +35,6 @@
     &--truck {
       height: 30rem;
       display: flex;
-      // justify-content: flex-end;
       align-items: flex-end;
     }
 
