--- a/src/styles/_faq.scss
+++ b/src/styles/_faq.scss
@@ -4,9 +4,13 @@
   color: variables.$whiteColor;
   background-color: variables.$deep-dark;
 
+  span,
+  p {
+    font-size: 2.6rem;
+  }
   &__list {
     max-width: 80rem;
-    padding: 2rem 0;
+    padding: 2rem;
     margin: 0 auto;
   }
 
@@ -25,17 +29,13 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    font-size: 2rem;
+    // font-size: 2rem;
     font-weight: 500;
     color: white;
     background: none;
     border: none;
     cursor: pointer;
     text-align: left;
-  }
-
-  &__icon {
-    font-size: 2rem;
   }
 
   &__answer {
@@ -53,5 +53,35 @@
 
   &__item--active .faq__answer {
     padding-top: 0.5rem;
+  }
+}
+
+@media (max-width: 1400px) {
+  .faq {
+    &__list {
+      span {
+        font-size: 2.6rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .faq {
+    &__list {
+      span,
+      p {
+        font-size: 2rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  .faq {
+    span,
+    p {
+      font-size: 1.6rem;
+    }
   }
 }
